# -MLops-churn-deployment

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
chaos/application/: server.py
chaos/domain/: customer.py
chaos/infrastructure/: connexion.py  customer_loader.py  infra_utils.py  postgres_manager.py  socio_eco.py
chaos/infrastructure/config/: config.py
chaos/test/: conftest.py
chaos/test/data/: random_marketing_input.json  test_sample_customer.csv  test_sample_indicators.csv
chaos/test/functional/: test_bdd.py  test_server.py  test_whole_api.py
chaos/test/unit/: test_customer.py  test_hello_world.py  test_unit_server.py
coverage/: .coveragerc  coverage.txt
deployment/: deployment.yml  example_pod_develop.yml  load_balancer.yml
docs/: conf.py  index.rst
proxy/: proxy_SQL_connexion.md
utils/: postgres_manager.py
